package com.github.tomap.modeler.model.diagramClass.excpetion;

public class BadTypeException extends Exception{

	public BadTypeException (String msg){
		super(msg);
	}
}
